  this will detect "clearly intended" END cards and produce a warning about
  their invalidity and fix them. (Backported from 3.2.1)

- Fixed a display formatting issue with fitsdiff where sometimes it did not
  show the difference between two floating point numbers if they were the same
  up to some low number of digits. (Backported from 3.2.1)


3.0.13 (unreleased)
-------------------

- Fixed a bug where writing a file with ``checksum=True`` did not add the
  checksum on new files. (Backported from 3.2.1)

- Fixed an issue where validating an HDU's checksums removed the checksum from
  that HDU's header entirely (even if it was valid.)
  (Backported from 3.2.1)

- Fixed an issue where the size of the heap was sometimes not computed
  properly when writing an existing table containing variable-length array
  columns to a new FITS file.  This could result in corruption in the new FITS
  file. (Backported from 3.2.1)


3.2 (2013-11-26)
----------------

Highlights
^^^^^^^^^^

- Rewrote CFITSIO-based backend for handling tile compression of FITS files.
  It now uses a standard CFITSIO instead of heavily modified pieces of CFITSIO
  as before.  PyFITS ships with its own copy of CFITSIO v3.35 which supports
  the latest version of the Tiled Image Convention (v2.3), but system
  packagers may choose instead to strip this out in favor of a
  system-installed version of CFITSIO.  Earlier versions may work, but nothing
  earlier than 3.28 has been tested yet. (#169)

- Added support for reading and writing tables using the Q format for columns.
  The Q format is identical to the P format (variable-length arrays) except
  that it uses 64-bit integers for the data descriptors, allowing more than
  4 GB of variable-length array data in a single table. (#160)

- Added initial support for table columns containing pseudo-unsigned integers.
  This is currently enabled by using the ``uint=True`` option when opening